...
                                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Kl0-HZ-sRm">
                                                                <rect key="frame" x="0.0" y="28.333333333333314" width="343" height="40"/>
                                                                <accessibility key="accessibilityConfiguration" identifier="usernameTextField"/>
                                                                <constraints>
                                                                    <constraint firstAttribute="height" constant="40" id="QL7-jP-VnF"/>
...
                                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="gcf-BG-HvC">
                                                                <rect key="frame" x="0.0" y="28.333333333333371" width="343" height="40"/>
                                                                <accessibility key="accessibilityConfiguration" identifier="passwordTextField"/>
                                                                <constraints>
                                                                    <constraint firstAttribute="height" constant="40" id="vae-nt-BMb"/>
...
                                                </constraints>
                                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                                <state key="normal" title="Sign In">
                                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                </state>
...
                                                </constraints>
                                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                                <state key="normal" title="Create Account">
                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                </state>
...
                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="6fj-I7-OTB">
                                                        <rect key="frame" x="0.0" y="28.333333333333314" width="343" height="40"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="newUserNameTextField"/>
                                                        <constraints>
                                                            <constraint firstAttribute="height" constant="40" id="p2h-ji-WW7"/>
...
                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="WkS-lV-vqH">
                                                        <rect key="frame" x="0.0" y="28.333333333333343" width="343" height="40"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="newPasswordTextField"/>
                                                        <constraints>
                                                            <constraint firstAttribute="height" constant="40" id="BM8-F9-jLX"/>
...
                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Phone Number" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="jn3-ab-ZEm">
                                                        <rect key="frame" x="0.0" y="28.333333333333314" width="343" height="40"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="newPhoneNumberTextField"/>
                                                        <constraints>
                                                            <constraint firstAttribute="height" constant="40" id="gOJ-Ib-OKk"/>
...
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                        <state key="normal" title="Sign Up">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </state>
...
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="My Plants" id="8ld-Wi-UJO">
                        <barButtonItem key="leftBarButtonItem" title="Item" image="person.crop.circle" catalog="system" id="hgz-qc-30K">
                            <connections>
...
                                                        <nil key="highlightedColor"/>
                                                    </label>
                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Enter a plant name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="jry-tU-MAd">
                                                        <rect key="frame" x="59" y="6.6666666666666572" width="143" height="21"/>
                                                        <color key="textColor" red="0.0" green="0.56284224989999998" blue="0.31881666180000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                        <viewLayoutGuide key="safeArea" id="mrq-Qe-3UO"/>
                    </view>
                    <navigationItem key="navigationItem" title="New Plant" id="Bm2-RQ-h4w">
                        <barButtonItem key="rightBarButtonItem" title="Save" id="Z8g-3w-NVI">
                            <color key="tintColor" red="0.0" green="0.56284224989999998" blue="0.31881666180000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                            <connections>
...
